# gnordvpn

./: .gitignore  CHANGELOG.txt  LICENSE  README.md  README.txt  gnordvpn.css  gnordvpn.desktop  gnordvpn.py  gtop.css  gtop.py  install.sh  pyproject.toml  uninstall.sh
.github/: FUNDING.yml
gnordvpn-1.1/gnordvpn-1.1.1/: gnordvpn.py
gnordvpn-1.1/gnordvpn-1.1.10/: MANIFEST.in  pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.11/: pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.12/: README.md  pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.13/: pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.14/: MANIFEST.in  README.md  pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.15/: pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.2/: README.md  pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.2/GNordVPN.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gnordvpn-1.1/gnordvpn-1.1.2/src/gnordvpn_sprokkel78/: gnordvpn.py
gnordvpn-1.1/gnordvpn-1.1.3/: README.md  pyproject.toml  setup.py
gnordvpn-1.1/gnordvpn-1.1.4/: MANIFEST.in  README.md  pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.5/: MANIFEST.in  README.md  pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.6/: pyproject.toml
gnordvpn-1.1/gnordvpn-1.1.7/: pyproject.toml
gnordvpn-1.2.1/: pyproject.toml
gnordvpn-1.2.2/: pyproject.toml
gnordvpn-1.2.3/: pyproject.toml
gnordvpn-1.2.4/: README.md  pyproject.toml
gnordvpn-1.2.5/: MANIFEST.in  pyproject.toml
gnordvpn-1.2.6/: pyproject.toml
gnordvpn-1.2.6/src/gnordvpn_sprokkel78/: CHANGELOG.txt  gnordvpn.py
gnordvpn-1.2.7/: MANIFEST.in  pyproject.toml
gnordvpn-1.2.9/: pyproject.toml
(+51 files in other folders)
