[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnordvpn_sprokkel78"
version = "1.1.2"
authors = [
  { name="Sprokkel78", email="sprokkel78.bart@gmail.com" },
]
description = "A GUI in pygtk for the nordvpn client binary on ubuntu"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Ubuntu Linux",
]

